--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rehype-katex": "^6.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "swr": "^2.0.4",
     "tailwind-merge": "^1.9.1",
     "theme-change": "^2.3.0",
     "title": "^3.5.3"
