--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@next/mdx": "^13.1.6",
     "@supabase/auth-helpers-nextjs": "^0.5.4",
     "@supabase/auth-helpers-react": "^0.3.1",
-    "@supabase/supabase-js": "^2.7.1",
+    "@supabase/auth-ui-react": "^0.3.5",
+    "@supabase/auth-ui-shared": "^0.1.3",
+    "@supabase/supabase-js": "^2.10.0",
     "@types/react-syntax-highlighter": "^15.5.6",
     "clsx": "^1.2.1",
     "csstype": "^3.1.1",
