--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^1.2.1",
     "csstype": "^3.1.1",
     "daisyui": "^2.50.0",
+    "luxon": "^3.3.0",
     "next": "^13.1.6",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -58,6 +59,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/luxon": "^3.3.0",
     "@types/react": "^18.0.27",
     "@types/title": "^3.4.1",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
