--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "swr": "^2.0.4",
     "tailwind-merge": "^1.9.1",
     "theme-change": "^2.3.0",
-    "title": "^3.5.3"
+    "title": "^3.5.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
@@ -62,6 +63,7 @@
     "@types/luxon": "^3.3.0",
     "@types/react": "^18.0.27",
     "@types/title": "^3.4.1",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "autoprefixer": "^10.4.13",
