--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next": "^13.1.6",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.6.9",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
     "react-hot-toast": "^2.4.0",
